Transform design from TableView to modern card-based layout with interactivity and responsiveness for the feedbacks