@@ -1,13 +1,14 @@
 package tn.esprit.controllers;
 
+import javafx.animation.ScaleTransition;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
+import javafx.scene.Parent;
 import javafx.scene.control.*;
-import javafx.scene.control.cell.PropertyValueFactory;
 import javafx.scene.layout.FlowPane;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.VBox;
@@ -15,6 +16,7 @@ import tn.esprit.models.Avis;
 import tn.esprit.models.FormationA;
 import tn.esprit.services.FormationServiceA;
 import tn.esprit.services.ServiceAvis;
+import javafx.util.Duration;
 
 import java.net.URL;
 import java.sql.SQLException;
@@ -23,24 +25,11 @@ import java.time.format.DateTimeFormatter;
 import java.util.Arrays;
 import java.util.List;
 import java.util.ResourceBundle;
-import java.util.stream.Collectors;
 
 public class AdminFormationListController implements Initializable, Searchable {
 
     @FXML
-    private TableView<FormationA> formationTableView;
-
-    @FXML
-    private TableColumn<FormationA, String> formationNameColumn;
-
-    @FXML
-    private TableColumn<FormationA, Double> noteMoyenneColumn;
-
-    @FXML
-    private TableColumn<FormationA, Integer> nombreAvisColumn;
-
-    @FXML
-    private TableColumn<FormationA, Void> actionsColumn;
+    private FlowPane formationFlowPane;
 
     @FXML
     private Label selectedFormationLabel;
@@ -50,6 +39,9 @@ public class AdminFormationListController implements Initializable, Searchable {
 
     @FXML
     private FlowPane avisFlowPane;
+
+    @FXML
+    private Button hideAvisButton;
 
     private ObservableList<FormationA> formationList;
     private ObservableList<FormationA> filteredFormationList;
@@ -61,123 +53,119 @@ public class AdminFormationListController implements Initializable, Searchable {
 
     @Override
     public void initialize(URL location, ResourceBundle resources) {
-        // Initialize the TableView columns
-        formationNameColumn.setCellValueFactory(new PropertyValueFactory<>("name"));
-        formationNameColumn.setCellFactory(column -> new TableCell<>() {
-            @Override
-            protected void updateItem(String item, boolean empty) {
-                super.updateItem(item, empty);
-                setAlignment(Pos.CENTER_LEFT);
-                setPadding(new Insets(10, 10, 10, 10));
-                if (empty || item == null) {
-                    setText(null);
-                } else {
-                    setText(item);
-                }
-            }
-        });
-
-        noteMoyenneColumn.setCellValueFactory(new PropertyValueFactory<>("averageScore"));
-        noteMoyenneColumn.setCellFactory(column -> new TableCell<>() {
-            @Override
-            protected void updateItem(Double item, boolean empty) {
-                super.updateItem(item, empty);
-                setAlignment(Pos.CENTER_LEFT);
-                setPadding(new Insets(10, 10, 10, 10));
-                if (empty || item == null) {
-                    setText(null);
-                } else {
-                    setText(decimalFormat.format(item) + "/5");
-                    if (item < 3) {
-                        setStyle("-fx-text-fill: #e74c3c;");
-                    } else if (item >= 3 && item < 4) {
-                        setStyle("-fx-text-fill: #f39c12;");
-                    } else {
-                        setStyle("-fx-text-fill: #2ecc71;");
-                    }
-                }
-            }
-        });
-
-        nombreAvisColumn.setCellValueFactory(new PropertyValueFactory<>("avisCount"));
-        nombreAvisColumn.setCellFactory(column -> new TableCell<>() {
-            @Override
-            protected void updateItem(Integer item, boolean empty) {
-                super.updateItem(item, empty);
-                setAlignment(Pos.CENTER_LEFT);
-                setPadding(new Insets(10, 10, 10, 10));
-                if (empty || item == null) {
-                    setText(null);
-                } else {
-                    setText(item.toString());
-                }
-            }
-        });
-
-        actionsColumn.setCellFactory(col -> new TableCell<>() {
-            private final Button avisButton = new Button("Avis");
-            private final HBox hbox = new HBox(avisButton);
-
-            {
-                avisButton.getStyleClass().add("action-button");
-                avisButton.setOnAction(event -> {
-                    FormationA formation = getTableView().getItems().get(getIndex());
-                    handleShowAvis(formation);
-                });
-                hbox.setAlignment(Pos.CENTER_LEFT);
-                hbox.setPadding(new Insets(10, 10, 10, 10));
-                avisButton.setPadding(new Insets(8, 20, 8, 20));
-            }
-
-            @Override
-            protected void updateItem(Void item, boolean empty) {
-                super.updateItem(item, empty);
-                setAlignment(Pos.CENTER_LEFT);
-                setPadding(new Insets(0));
-                if (empty) {
-                    setGraphic(null);
-                } else {
-                    setGraphic(hbox);
-                }
-            }
-        });
-
-        // Dynamically adjust column widths
-        formationTableView.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY);
-        formationNameColumn.prefWidthProperty().bind(formationTableView.widthProperty().multiply(0.4));
-        noteMoyenneColumn.prefWidthProperty().bind(formationTableView.widthProperty().multiply(0.2));
-        nombreAvisColumn.prefWidthProperty().bind(formationTableView.widthProperty().multiply(0.2));
-        actionsColumn.prefWidthProperty().bind(formationTableView.widthProperty().multiply(0.2));
-
-        formationTableView.setFixedCellSize(60);
-
         // Load formations
         loadFormations();
 
         // Initialize the filtered list
         filteredFormationList = FXCollections.observableArrayList(formationList);
+
+        // Style the hide avis button
+        hideAvisButton.setPadding(new Insets(8, 20, 8, 20));
+
+        // Bind FlowPane size to parent for responsive layout
+        Parent parent = formationFlowPane.getParent();
+
     }
 
     private void loadFormations() {
         try {
             formationList = FXCollections.observableArrayList(formationService.getAllFormations());
-            formationTableView.setItems(formationList);
+            updateFormationTiles(formationList);
         } catch (SQLException e) {
             e.printStackTrace();
+            // "Erreur" is correct in French; ignore typo warning
             showAlert("Erreur", "Impossible de charger les formations : " + e.getMessage());
         }
+    }
+
+    private void updateFormationTiles(ObservableList<FormationA> formations) {
+        formationFlowPane.getChildren().clear();
+        for (FormationA formation : formations) {
+            VBox tile = createFormationTile(formation);
+            formationFlowPane.getChildren().add(tile);
+        }
+    }
+
+    private VBox createFormationTile(FormationA formation) {
+        VBox tile = new VBox(10); // Increased spacing for larger tile
+        tile.getStyleClass().add("formation-tile");
+        tile.setPrefWidth(200); // Increased from 150
+        tile.setPrefHeight(200); // Increased from 150
+        tile.setAlignment(Pos.CENTER);
+        tile.setPadding(new Insets(15)); // Increased for larger tile
+
+        // Formation Name
+        Label nameLabel = new Label(formation.getName());
+        nameLabel.getStyleClass().add("formation-name");
+        nameLabel.setWrapText(true);
+        nameLabel.setMaxWidth(180); // Increased from 130
+
+        // Average Score with Animated Stars
+        HBox scoreBox = new HBox(4); // Slightly increased spacing
+        scoreBox.getChildren().addAll(createStarBox(formation.getAverageScore()));
+        Label scoreLabel = new Label(decimalFormat.format(formation.getAverageScore()) + "/5");
+        scoreLabel.getStyleClass().add("score-label");
+        scoreBox.getChildren().add(scoreLabel);
+        scoreBox.setAlignment(Pos.CENTER);
+
+        // Number of Reviews
+        Label avisCountLabel = new Label(formation.getAvisCount() + " Avis");
+        avisCountLabel.getStyleClass().add("avis-count");
+
+        // Action Button
+        Button avisButton = new Button("Avis");
+        avisButton.getStyleClass().add("action-button");
+        avisButton.setPadding(new Insets(6, 12, 6, 12)); // Adjusted for larger tile
+        avisButton.setOnAction(event -> handleShowAvis(formation));
+
+        tile.getChildren().addAll(nameLabel, scoreBox, avisCountLabel, avisButton);
+
+        // Hover effect (glow and tilt)
+        ScaleTransition scale = new ScaleTransition(Duration.millis(200), tile);
+        scale.setToX(1.05);
+        scale.setToY(1.05);
+        scale.setAutoReverse(true);
+        scale.setCycleCount(2);
+        tile.setOnMouseEntered(e -> {
+            tile.setStyle("-fx-effect: dropshadow(gaussian, #00aaff, 20, 0.7, 0, 0); -fx-rotate: 3;");
+            scale.play();
+        });
+        tile.setOnMouseExited(e -> {
+            tile.setStyle("-fx-effect: none; -fx-rotate: 0;");
+            scale.stop();
+            tile.setScaleX(1);
+            tile.setScaleY(1);
+        });
+
+        return tile;
+    }
+
+    private List<Label> createStarBox(double score) {
+        List<Label> stars = new java.util.ArrayList<>();
+        for (int i = 1; i <= 5; i++) {
+            Label star = new Label("★");
+            star.getStyleClass().add(i <= (int) score ? "star-selected" : "star");
+            ScaleTransition starAnimation = new ScaleTransition(Duration.millis(200), star);
+            starAnimation.setToX(1.2);
+            starAnimation.setToY(1.2);
+            starAnimation.setAutoReverse(true);
+            starAnimation.setCycleCount(2);
+            star.setOnMouseEntered(e -> starAnimation.play());
+            stars.add(star);
+        }
+        return stars;
     }
 
     @Override
     public void handleSearch(String searchText) {
         if (searchText.isEmpty()) {
-            formationTableView.setItems(formationList);
+            updateFormationTiles(formationList);
         } else {
             filteredFormationList.clear();
             filteredFormationList.addAll(formationList.stream()
-                    .filter(formation -> formation.getName().toLowerCase().contains(searchText))
-                    .collect(Collectors.toList()));
-            formationTableView.setItems(filteredFormationList);
+                    .filter(formation -> formation.getName().toLowerCase().contains(searchText.toLowerCase()))
+                    .toList());
+            updateFormationTiles(filteredFormationList);
         }
     }
 
@@ -208,39 +196,32 @@ public class AdminFormationListController implements Initializable, Searchable {
     private VBox createAvisCard(Avis avis) {
         VBox card = new VBox(5);
         card.getStyleClass().add("avis-card");
-        card.setPrefWidth(300);
-        card.setPrefHeight(180);
-        card.setMinHeight(180);
-        card.setMaxHeight(180);
+        card.setPrefWidth(350); // Reverted from 400
+        card.setPrefHeight(220); // Reverted from 260
+        card.setMinHeight(220); // Reverted from 260
+        card.setMaxHeight(220); // Reverted from 260
 
         // Check for bad words
         boolean hasBadWord = containsBadWord(avis.getCommentaire());
         if (hasBadWord) {
-            // Cute design for flagged card
             card.setStyle("-fx-border-color: #ff4040; -fx-border-width: 2; -fx-border-radius: 10; " +
-                    "-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 5, 0, 2, 2);");
+                    "-fx-effect: dropshadow(gaussian, #ff4040, 10, 0.3, 0, 0);");
 
-            // Flag icon and reason
             HBox flaggedBox = new HBox(5);
             flaggedBox.setAlignment(Pos.CENTER_LEFT);
-            Label flagIcon = new Label("\uD83D\uDEA9"); // Unicode for flag emoji (🚩)
-            flagIcon.setStyle("-fx-text-fill: #ff4040; -fx-font-size: 16px; -fx-font-family: 'Arial';");
+            Label flagIcon = new Label("\uD83D\uDEA9"); // Flag emoji (🚩)
+            flagIcon.setStyle("-fx-text-fill: #ff4040; -fx-font-size: 18px; -fx-font-family: 'Montserrat';");
             Label flaggedLabel = new Label(" Inappropriate Content");
-            flaggedLabel.setStyle("-fx-text-fill: #ff4040; -fx-font-weight: bold; -fx-font-family: 'Comic Sans MS';");
+            flaggedLabel.setStyle("-fx-text-fill: #ff4040; -fx-font-weight: bold; -fx-font-family: 'Montserrat';");
             flaggedBox.getChildren().addAll(flagIcon, flaggedLabel);
-            flaggedBox.setStyle("-fx-background-color: #ffe6e6; -fx-background-radius: 5; -fx-padding: 5;");
+            flaggedBox.setStyle("-fx-background-color: #ffe6e6; -fx-background-radius: 5; -fx-padding: 8;");
             card.getChildren().add(flaggedBox);
         }
 
         HBox starBox = new HBox(5);
-        for (int i = 1; i <= 5; i++) {
-            Label star = new Label("★");
-            star.getStyleClass().add(i <= (int) avis.getNote() ? "star-selected" : "star");
-            starBox.getChildren().add(star);
-        }
-        // Add top padding to starBox in non-flagged cards to align with flagged cards
+        starBox.getChildren().addAll(createStarBox(avis.getNote()));
         if (!hasBadWord) {
-            starBox.setPadding(new Insets(30, 0, 0, 0)); // Compensate for missing flaggedBox (~30px)
+            starBox.setPadding(new Insets(40, 0, 0, 0)); // Reverted for smaller card
         }
 
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
@@ -251,16 +232,14 @@ public class AdminFormationListController implements Initializable, Searchable {
         commentLabel.getStyleClass().add("comment-text");
         commentLabel.setWrapText(true);
 
-        // Button box for delete button (now added for all avis)
         HBox buttonBox = new HBox();
         buttonBox.setAlignment(Pos.CENTER_RIGHT);
-        buttonBox.setPadding(new Insets(0, 5, 5, 0));
-        buttonBox.setMinHeight(30);
+        buttonBox.setPadding(new Insets(0, 10, 10, 0)); // Reverted for smaller card
+        buttonBox.setMinHeight(40); // Reverted for smaller card
 
-        // Add Delete Button for all avis
         Button deleteButton = new Button();
-        Label trashIcon = new Label("\uD83D\uDDD1"); // Unicode for trash can emoji (🗑)
-        trashIcon.setStyle("-fx-text-fill: #ff4040; -fx-font-size: 30px; -fx-font-weight: bold;");
+        Label trashIcon = new Label("\uD83D\uDDD1"); // Trash can emoji (🗑)
+        trashIcon.setStyle("-fx-text-fill: #ff4040; -fx-font-size: 35px; -fx-font-weight: bold;");
         deleteButton.setGraphic(trashIcon);
         deleteButton.setStyle("-fx-background-color: transparent; -fx-padding: 5;");
         deleteButton.getStyleClass().add("delete-button");
@@ -281,30 +260,21 @@ public class AdminFormationListController implements Initializable, Searchable {
     }
 
     private void handleDeleteAvis(Avis avis) {
-        // Check if the avis is flagged
         boolean isFlagged = containsBadWord(avis.getCommentaire());
         if (!isFlagged) {
-            // Show error message if the avis is not flagged
             showAlert("Erreur", "Vous ne pouvez pas supprimer cet avis, il respecte notre politique");
             return;
         }
 
-        // Show confirmation dialog for flagged avis
         Alert confirmAlert = new Alert(Alert.AlertType.CONFIRMATION);
         confirmAlert.setTitle("Supprimer Avis");
         confirmAlert.setHeaderText("Êtes-vous sûr de vouloir supprimer cet avis ?");
         confirmAlert.setContentText("Cette action est irréversible.");
         confirmAlert.showAndWait().ifPresent(response -> {
             if (response == ButtonType.OK) {
-                // Delete the Avis using ServiceAvis
                 serviceAvis.delete(avis);
-                // Show success message
                 showAlert("Succès", "Avis signalé supprimé avec succès");
-
-                // Reload all formations to refresh the UI
                 loadFormations();
-
-                // Refresh the Avis cards for the current formation
                 if (currentFormation != null) {
                     currentFormation = formationList.stream()
                             .filter(f -> f.getId() == currentFormation.getId())
